<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/days_one"
        android:text="@string/welcome_screen"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/health_app_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072"
        app:srcCompat="@drawable/health" />

    <Button
        android:id="@+id/button_add_food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_button"
        android:text="@string/item_add_food" />

    <Button
        android:id="@+id/button_add_symptom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_add_symptom"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_button" />

    <Button
        android:id="@+id/button_add_medication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_add_medication"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_button" />

    <Button
        android:id="@+id/button_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_stats_button"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_button" />

    <Button
        android:id="@+id/button_stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/see_most_frequent"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_button" />

</LinearLayout>

