<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/medication_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/medication_name"
            android:autofillHints=""
            android:inputType="text" />

        <EditText
            android:id="@+id/medication_dose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dose"
            android:autofillHints=""
            android:inputType="text" />

        <Button
            android:id="@+id/medication_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:onClick="showDatePickerDialog"
            android:drawableEnd="@android:drawable/ic_menu_today"
            android:focusable="false"
            android:hint="@string/date" />

        <Button
            android:id="@+id/save_medication_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>